Adding Composite method

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,4 +13,5 @@ add_executable(Home_Animals main.cpp
         Animals/Fish.h
         Animals/Hamster.h
         Animals/Factory.h
+        Animals/Composite.h
 )
